--- a/index-test.html
+++ b/index-test.html
@@ -48,11 +48,11 @@
 <!-- BANNIÈRE MOBILE TOUT-EN-UN -->
 <div id="mobile-banner" style="display: none;">
   <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
-    <span><strong>Dates sélectionnées</strong></span>
+    <span id="banner-summary">Dates sélectionnées</span>
     <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
   </div>
 
-  <div id="mobile-banner-details" style="display: none; margin-top: 0.75rem;">
+  <div id="mobile-banner-details" class="">
     <p>
       Séjour du <span id="mobile-start"></span> au <span id="mobile-end"></span><br />
       <strong id="mobile-nights"></strong> nuits sélectionnées
@@ -72,6 +72,7 @@
     </ul>
   </div>
 </div>
+
 				
 				<!-- CONTACT -->
 				<section class="panel color4-alt">
