--- a/index-test.html
+++ b/index-test.html
@@ -49,7 +49,7 @@
 <div id="mobile-banner" style="display: none;">
   <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span id="banner-summary">Dates sélectionnées</span>
-    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
+    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▼</button>
   </div>
 
   <div id="mobile-banner-details" class="">
@@ -58,20 +58,25 @@
       <strong id="mobile-nights"></strong> nuits sélectionnées
     </p>
 
-    <label for="adults">👤 Adultes</label>
-    <input type="number" id="adults" name="adults" min="1" max="6" value="2" />
+    <div class="field">
+      <label for="adults">Adultes</label>
+      <input type="number" id="adults" name="adults" min="1" max="6" value="2" />
+    </div>
 
-    <label for="children" style="margin-top: 0.5rem;">🧒 Enfants</label>
-    <input type="number" id="children" name="children" min="0" max="4" value="0" />
+    <div class="field">
+      <label for="children">Enfants</label>
+      <input type="number" id="children" name="children" min="0" max="4" value="0" />
+    </div>
 
     <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
 
-    <ul class="actions stacked" style="margin-top: 0.5rem;">
+    <ul class="actions" style="margin-top: 0.5rem; display: flex; justify-content: center; gap: 1rem;">
       <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
       <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
     </ul>
   </div>
 </div>
+
 
 				
 				<!-- CONTACT -->
