--- a/index-test.html
+++ b/index-test.html
@@ -49,7 +49,7 @@
 <div id="mobile-banner" style="display: none;">
   <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
     <span id="banner-summary">Dates sélectionnées</span>
-    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▼</button>
+    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
   </div>
 
   <div id="mobile-banner-details" class="">
