--- a/index-test.html
+++ b/index-test.html
@@ -72,7 +72,7 @@
 
     <ul class="actions" style="margin-top: 0.5rem; display: flex; justify-content: center; gap: 1rem;">
       <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
-      <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
+      <li><a href="#" id="cancel-selection" class="button primary small icon solid fa-times">Annuler</a></li>
     </ul>
   </div>
 </div>
