--- a/index-test.html
+++ b/index-test.html
@@ -58,24 +58,46 @@
       <strong id="mobile-nights"></strong> nuits sélectionnées
     </p>
 
-    <div class="field">
-      <label for="adults">Adultes</label>
-      <input type="number" id="adults" name="adults" min="1" max="6" value="2" />
-    </div>
+    <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
+      <div class="field half">
+        <label for="adults">Adultes</label>
+        <div class="select-wrapper">
+          <select name="adults" id="adults">
+            <option value="1">1 adulte</option>
+            <option value="2">2 adultes</option>
+            <option value="3">3 adultes</option>
+            <option value="4">4 adultes</option>
+            <option value="5">5 adultes</option>
+            <option value="6">6 adultes</option>
+          </select>
+        </div>
+      </div>
 
-    <div class="field">
-      <label for="children">Enfants</label>
-      <input type="number" id="children" name="children" min="0" max="4" value="0" />
+      <div class="field half">
+        <label for="children">Enfants</label>
+        <div class="select-wrapper">
+          <select name="children" id="children">
+            <option value="0">0 enfant</option>
+            <option value="1">1 enfant</option>
+            <option value="2">2 enfants</option>
+            <option value="3">3 enfants</option>
+            <option value="4">4 enfants</option>
+            <option value="5">5 enfants</option>
+            <option value="6">6 enfants</option>
+          </select>
+        </div>
+      </div>
     </div>
 
     <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
 
-    <ul class="actions" style="margin-top: 0.5rem; display: flex; justify-content: center; gap: 1rem;">
+    <ul class="actions" style="justify-content: center;">
       <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
-      <li><a href="#" id="cancel-selection" class="button primary small icon solid fa-times">Annuler</a></li>
+      <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
     </ul>
   </div>
 </div>
+
 
 
 				
