--- a/index-test.html
+++ b/index-test.html
@@ -62,29 +62,14 @@
       <div class="field half">
         <label for="adults">Adultes</label>
         <div class="select-wrapper">
-          <select name="adults" id="adults">
-            <option value="1">1 adulte</option>
-            <option value="2">2 adultes</option>
-            <option value="3">3 adultes</option>
-            <option value="4">4 adultes</option>
-            <option value="5">5 adultes</option>
-            <option value="6">6 adultes</option>
-          </select>
+          <select name="adults" id="adults"></select>
         </div>
       </div>
 
       <div class="field half">
         <label for="children">Enfants</label>
         <div class="select-wrapper">
-          <select name="children" id="children">
-            <option value="0">0 enfant</option>
-            <option value="1">1 enfant</option>
-            <option value="2">2 enfants</option>
-            <option value="3">3 enfants</option>
-            <option value="4">4 enfants</option>
-            <option value="5">5 enfants</option>
-            <option value="6">6 enfants</option>
-          </select>
+          <select name="children" id="children"></select>
         </div>
       </div>
     </div>
