--- a/index-test.html
+++ b/index-test.html
@@ -53,10 +53,10 @@
   </div>
 
   <div id="mobile-banner-details" class="">
-    <p>
-      Séjour du <span id="mobile-start"></span> au <span id="mobile-end"></span><br />
-      <strong id="mobile-nights"></strong> nuits sélectionnées
-    </p>
+	<p>
+	  Séjour du <strong><span id="mobile-start"></span></strong> au <strong><span id="mobile-end"></span></strong><br />
+	  <strong id="mobile-nights"></strong> nuits sélectionnées
+	</p>
 
     <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
       <div class="field half">
