--- a/index-test.html
+++ b/index-test.html
@@ -55,7 +55,7 @@
   <div id="mobile-banner-details" class="">
 	<p>
 	  Séjour du <strong><span id="mobile-start"></span></strong> au <strong><span id="mobile-end"></span></strong><br />
-	  <strong id="mobile-nights"></strong> nuits sélectionnées
+	  <strong id="mobile-nights"></strong> nuit(s) sélectionnée(s)
 	</p>
 
     <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
