--- a/index-test.html
+++ b/index-test.html
@@ -54,8 +54,9 @@
 
   <div id="mobile-banner-details" class="">
 	<p>
-	  Séjour du <strong><span id="mobile-start"></span></strong> au <strong><span id="mobile-end"></span></strong><br />
-	  <strong id="mobile-nights"></strong> nuit(s) sélectionnée(s)
+	  Séjour du <strong><u><span id="mobile-start"></span></u></strong>
+	  au <strong><u><span id="mobile-end"></span></u></strong><br />
+	  <strong><u><span id="mobile-nights"></span> nuits</span></u></strong> sélectionnées
 	</p>
 
     <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
