--- a/index.html
+++ b/index.html
@@ -435,6 +435,45 @@
 			</div>
 		</div>
 
+		<!-- BANNIÈRE ////////////////////////////////////////////////////////////////////////// -->
+		<div id="mobile-banner" style="display: none;">
+		  <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
+		    <span id="banner-summary">Dates sélectionnées</span>
+		    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
+		  </div>
+		
+		  <div id="mobile-banner-details">
+		    <p>
+		      Séjour du <strong><u><span id="mobile-start"></span></u></strong> au 
+		      <strong><u><span id="mobile-end"></span></u></strong><br />
+		      <strong><u><span id="mobile-nights"></span> nuits</u></strong> sélectionnées
+		    </p>
+		
+		    <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
+		      <div class="field half">
+		        <label for="adults">Adultes</label>
+		        <div class="select-wrapper">
+		          <select name="adults" id="adults"></select>
+		        </div>
+		      </div>
+		
+		      <div class="field half">
+		        <label for="children">Enfants</label>
+		        <div class="select-wrapper">
+		          <select name="children" id="children"></select>
+		        </div>
+		      </div>
+		    </div>
+		
+		    <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
+		
+		    <ul class="actions" style="justify-content: center;">
+		      <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
+		      <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
+		    </ul>
+		  </div>
+		</div>
+		
 		<!-- Scripts -->
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
@@ -443,6 +482,7 @@
 		<script src="assets/js/gallery.js"></script>
 		<script src="assets/js/equipements.js"></script>
 		<script src="assets/js/planning.js"></script>
+		<script src="assets/js/banner.js"></script>
 		<script src="assets/js/form-validation.js"></script>
 		<script src="assets/js/map.js"></script>
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpGB6jezXVKBDSLkgR4iHKTZ9rcMUIHU&callback=initMap"></script>
