--- a/index-test.html
+++ b/index-test.html
@@ -78,7 +78,7 @@
     <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
 
     <ul class="actions" style="justify-content: center;">
-      <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
+      <li><a href="#contact" class="button primary small icon solid fa-arrow-right">Passer à l'étape 2</a></li>
       <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
     </ul>
   </div>
