--- a/index-test.html
+++ b/index-test.html
@@ -56,17 +56,15 @@
         <i class="fas fa-circle" id="step-dot-2" style="color: white; opacity: 0.4;"></i>
       </div>
     </div>
-    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">
-      <i class="fa-regular fa-circle-up"></i>
-    </button>
+    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
   </div>
 
   <div id="mobile-banner-details" class="">
-    <p>
-      Séjour du <strong><span id="mobile-start"></span></strong>
-      au <strong><span id="mobile-end"></span></strong><br />
-      <strong><span id="mobile-nights"></span> nuits</strong> sélectionnées
-    </p>
+	<p>
+	  Séjour du <strong><u><span id="mobile-start"></span></u></strong>
+	  au <strong><u><span id="mobile-end"></span></u></strong><br />
+	  <strong><u><span id="mobile-nights"></span> nuits</span></u></strong> sélectionnées
+	</p>
 
     <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
       <div class="field half">
@@ -86,10 +84,10 @@
 
     <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
 
-    <ul class="actions" style="justify-content: center; gap: 0.5rem;">
-      <li><a href="#" id="step-toggle" class="button primary small icon solid fa-arrow-circle-right">Suivant</a></li>
-      <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
-    </ul>
+	<ul class="actions" style="justify-content: center; gap: 0.5rem;">
+	  <li><a href="#" id="step-toggle" class="button primary small icon solid fa-arrow-circle-right">Suivant</a></li>
+	  <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
+	</ul>
   </div>
 </div>
 
