--- a/index.html
+++ b/index.html
@@ -438,17 +438,23 @@
 		<!-- BANNIÈRE ////////////////////////////////////////////////////////////////////////// -->
 		<div id="mobile-banner" style="display: none;">
 		  <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
-		    <span id="banner-summary">Dates sélectionnées</span>
-		    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">▲</button>
+		    <div style="display: flex; align-items: center; gap: 0.75rem;">
+		      <span id="banner-summary"></span>
+		      <div id="step-indicator" style="display: flex; gap: 0.5rem;">
+		        <i class="fas fa-circle" id="step-dot-1" style="color: white; opacity: 0.4;"></i>
+		        <i class="fas fa-circle" id="step-dot-2" style="color: white; opacity: 0.4;"></i>
+		      </div>
+		    </div>
+		    <button id="toggle-banner" style="background: none; border: none; color: white; font-size: 1.2em;">
+				<i class="fa-regular fa-circle-up"></i>
+			</button>
 		  </div>
-		
-		  <div id="mobile-banner-details">
-		    <p>
-		      Séjour du <strong><u><span id="mobile-start"></span></u></strong> au 
-		      <strong><u><span id="mobile-end"></span></u></strong><br />
-		      <strong><u><span id="mobile-nights"></span> nuits</u></strong> sélectionnées
-		    </p>
-		
+		  <div id="mobile-banner-details" class="">
+			<p>
+			  Séjour du <strong><u><span id="mobile-start"></span></u></strong>
+			  au <strong><u><span id="mobile-end"></span></u></strong><br />
+			  <strong><u><span id="mobile-nights"></span> nuits</span></u></strong> sélectionnées
+			</p>
 		    <div class="fields" style="margin-top: 1rem; display: flex; gap: 1rem; justify-content: center;">
 		      <div class="field half">
 		        <label for="adults">Adultes</label>
@@ -456,7 +462,6 @@
 		          <select name="adults" id="adults"></select>
 		        </div>
 		      </div>
-		
 		      <div class="field half">
 		        <label for="children">Enfants</label>
 		        <div class="select-wrapper">
@@ -464,13 +469,11 @@
 		        </div>
 		      </div>
 		    </div>
-		
 		    <p id="total-price" style="font-weight: bold; margin-top: 0.75rem;">Total : —</p>
-		
-		    <ul class="actions" style="justify-content: center;">
-		      <li><a href="#contact" class="button primary small icon solid fa-check">Réserver</a></li>
-		      <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
-		    </ul>
+			<ul class="actions" style="justify-content: center; gap: 0.5rem;">
+			  <li><a href="#" id="step-toggle" class="button primary small icon solid fa-arrow-circle-right">Suivant</a></li>
+			  <li><a href="#" id="cancel-selection" class="button small icon solid fa-times">Annuler</a></li>
+			</ul>
 		  </div>
 		</div>
 		
