--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 					<div class="planning-bg"></div>
 
 					<div class="intro planning-blur-style">
-						<h2 class="major">📅 Planning & Tarifs</h2>
-						<p>Consultez les dates disponibles, les réservations et les tarifs. Navigation par mois.</p>
+						<h2 class="major">📅 Tarifs & Réservation</h2>
+						<p>Choisissez vos dates directement dans le calendrier pour connaître les tarifs et finaliser votre réservation en quelques clics.</p>
 						<ul class="actions" style="margin-top: 1.5rem;">
 							<li>
 								<a href="#" id="open-reglement" class="button primary icon solid fa-info-circle">Règlement intérieur</a>
@@ -281,7 +281,7 @@
 					<div class="intro color4">
 						<h2 class="major">📧 Contactez-nous</h2>
 						<p>
-							Pour toute question ou demande d'information, vous pouvez nous écrire via le formulaire de contact ou effectuer directement une demande de réservation grâce au formulaire dédié. Vous pouvez également échanger
+							Pour toute question ou demande d'information, vous pouvez nous écrire via le formulaire de contact. Vous pouvez également échanger
 							avec Nestor, un assistant intelligent propulsé par ChatGPT, disponible à tout moment pour vous renseigner sur la villa, ses équipements ou les activités à proximité.
 						</p>
 						<ul class="actions">
