--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<span class="themysion">Calypso Bay</span>
 						</h2>
 						<p>
-							Jolie villa bois d’architecte, neuve et contemporaine, avec piscine à débordement et vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau.<br />
+							Jolie villa bois de standing, de 2022, sans vis-à-vis, avec piscine à débordement et vue imprenable sur la mer, les îlets Pigeon et la réserve Cousteau.<br />
 							Pensée pour une vie dedans-dehors, elle offre des prestations de qualité dans un quartier résidentiel calme et très agréable.
 						</p>
 						<p class="flag-links">
@@ -66,12 +66,11 @@
 				</section>
 
 				<!-- D E S C R I P T I O N //////////////////////////////////////////////////////////////////////////////// -->
-				<section class="panel medium color1">
-					<div class="intro joined">
+				<section class="panel large color1">
+					<div class="intro joined span-3-5">
 						<h2 class="major">📋 Descriptif de la villa</h2>
 						<p>
-							Villa contemporaine de 180 m² située sur un terrain de 1 350 m², idéale pour accueillir jusqu’à 6 personnes. Elle comprend 3 chambres de 15 m² avec salles de bains privatives, une grande terrasse extérieure de 50
-							m² avec piscine privée, un parking pour 3 voitures, ainsi que des équipements modernes et autonomes tels que deux réserves d’eau et un chauffe-eau solaire.
+							Villa contemporaine de <b>180 m²</b> située sur un terrain de <b>1 350 m²</b>, idéale pour accueillir jusqu’à <b>6 personnes</b>. Elle comprend <b>3 chambres</b> de <b>15 m²</b> avec chacune sa salle de bains privative, une cuisine équipée, un salon intérieur et une grande terrasse extérieure de <b>50 m²</b> avec <b>piscine privée</b>, un espace repas couvert, un salon extérieur, un parking pour <b>5 voitures</b>, ainsi que des équipements autonomes tels que <b>deux réserves d’eau (eau de pluie et eau de réseau)</b> et un <b>chauffe-eau solaire</b>.
 						</p>
 					</div>
 					<div class="inner">
@@ -270,12 +269,13 @@
 							<li><i class="fas fa-sign-in-alt"></i> Arrivée entre 15:00 et 20:00</li>
 							<li><i class="fas fa-sign-out-alt"></i> Départ avant 10:00</li>
 							<li><i class="fas fa-user-friends"></i> 6 voyageurs maximum</li>
+							<li><i class="fas fa-baby"></i> Pas d'enfant de moins de 8 ans</li>
 							<li><i class="fas fa-dog"></i> Pas d’animaux</li>
 							<li><i class="fas fa-moon"></i> Calme requis entre 23:00 et 07:00</li>
 							<li><i class="fas fa-glass-cheers"></i> Pas de fête ni de soirée</li>
 							<li><i class="fas fa-camera"></i> Photographie commerciale autorisée</li>
 							<li><i class="fas fa-user-plus"></i> Visites autorisées (pas d’hébergement pour les invités)</li>
-							<li><i class="fas fa-smoking"></i> Fumeur autorisé (hors des chambres et des salles de bains)</li>
+							<li><i class="fas fa-smoking"></i> Fumeurs autorisés (hors des chambres et des salles de bains)</li>
 						</ul>
 					</div>
 				</div>
@@ -378,7 +378,7 @@
 				<!-- C O P Y R I G H T //////////////////////////////////////////////////////////////////////////////// -->
 				<div class="copyright">
 					<span>&copy; Calypso Bay | By</span>
-					<span class="moriarty">Moriarty</span>.
+					<a href="https://moriarty-design.fr" target="_blank" rel="noopener" style="font-family: 'Engagement', 'Brush Script MT', cursive; font-size: 2.2em; line-height: 1; margin-left: 0.25em; text-decoration: none; color: inherit;">Moriarty</a>.
 				</div>
 			</div>
 		</div>
