MAJ Ouv/Fer Bannière

--- a/index.html
+++ b/index.html
@@ -385,6 +385,9 @@
 
 		<!-- BANNIÈRE ////////////////////////////////////////////////////////////////////////// -->
 		<div id="mobile-banner" style="display: none;">
+		  <!-- Barre de glissement tactile -->
+		  <div id="swipe-indicator" style="width: 25%; height: 4px; background: rgba(255,255,255,0.3); position: relative; cursor: grab; margin: 0 auto; border-radius: 2px;">
+		  </div>
 		  <div id="mobile-banner-header" style="display: flex; justify-content: space-between; align-items: center;">
 		    <div style="display: flex; align-items: center; gap: 0.75rem;">
 		      <span id="banner-summary"></span>
