--- a/test-rapide.html
+++ b/test-rapide.html
@@ -59,7 +59,7 @@
       <p>
         <strong>URL testée :</strong>
         <code id="gas-url"
-          >https://script.google.com/macros/s/AKfycbx8thcTAG0Pku5Nu4Xv03-gktS4nG99lZEZ4cnXWxt-VUGc0M0lQ7mS7A-sFlNyC1U/exec</code
+          >https://script.google.com/macros/s/AKfycbwhcCISvo6FUPHzp3uNNZvoXtP1EjFPBuGgttCv27vAKaMVl3HsuAKKxKQvuegOFDs/exec</code
         >
       </p>
 
@@ -81,7 +81,7 @@
 
     <script>
       const GAS_URL =
-        'https://script.google.com/macros/s/AKfycbx8thcTAG0Pku5Nu4Xv03-gktS4nG99lZEZ4cnXWxt-VUGc0M0lQ7mS7A-sFlNyC1U/exec'
+        'https://script.google.com/macros/s/AKfycbwhcCISvo6FUPHzp3uNNZvoXtP1EjFPBuGgttCv27vAKaMVl3HsuAKKxKQvuegOFDs/exec'
 
       function showResult(content, isSuccess = true) {
         const result = document.getElementById('result')
@@ -117,8 +117,8 @@
         showResult('⏳ Test avec paramètres...', true)
 
         const params = new URLSearchParams({
-          name: 'Test User',
-          email: 'test@example.com',
+          name: 'Kévin TEST',
+          email: 'kevinblart@live.fr',
           reservationDetails:
             'Dates : 15 janvier 2024 au 20 janvier 2024 (5 nuits)\nVoyageurs : 2 adultes\n\nDétail du prix :\n• Total des nuits (5) : 750 €\n• Frais de ménage : 100 €\n• Taxes (2 adultes) : 23.00 €\n• Total : 873.00 €',
           userMessage: 'Test de réservation'
