MAJ Design reservation

--- a/public/reservation-acceptee.html
+++ b/public/reservation-acceptee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Réservation Acceptée - Calypso Bay</title>
+    <title>Demande de Réservation Acceptée - Calypso Bay</title>
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
     <style>
@@ -59,14 +59,17 @@
     <div class="success-container">
       <div class="success-card">
         <div class="success-icon">✅</div>
-        <h1 class="success-title">Réservation Acceptée !</h1>
+        <h1 class="success-title">Demande de Réservation Acceptée !</h1>
         <p class="success-message">
-          Nous avons le plaisir de vous confirmer que votre réservation a été
-          acceptée.<br />
-          Vous recevrez prochainement un email de confirmation avec tous les
-          détails.
+          La demande de réservation a été acceptée avec succès.<br />
+          Un email de confirmation a été envoyé au client avec le lien pour
+          finaliser sa réservation.
         </p>
         <a href="/" class="btn-home">Retour à l'accueil</a>
+        <p style="margin-top: 20px; font-size: 14px; color: #6b7280">
+          Vous pouvez maintenant attendre que le client finalise sa réservation
+          et effectue le paiement.
+        </p>
       </div>
     </div>
   </body>
