--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Finaliser ma réservation - Calypso Bay</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <script src="https://js.stripe.com/v3/"></script>
     <style>
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 40px 20px;
-      }
-      .header {
-        text-align: center;
-        margin-bottom: 40px;
-      }
-      .header h1 {
-        color: #5d3fd3;
-        font-size: 2.5rem;
-        margin-bottom: 10px;
-      }
-      .header p {
-        color: #6b7280;
-        font-size: 1.1rem;
-      }
       .form-section {
-        background: white;
+        background: rgba(255, 255, 255, 0.95);
         border-radius: 16px;
         padding: 30px;
         margin-bottom: 30px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
-        border: 1px solid #e5e7eb;
-      }
-      .form-section h2 {
-        color: #5d3fd3;
-        margin-bottom: 20px;
-        font-size: 1.5rem;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
       }
       .form-group {
         margin-bottom: 20px;
@@ -47,6 +35,7 @@
         margin-bottom: 8px;
         font-weight: 600;
         color: #374151;
+        font-size: 0.9rem;
       }
       .form-group input,
       .form-group textarea {
@@ -55,34 +44,43 @@
         border: 2px solid #e5e7eb;
         border-radius: 8px;
         font-size: 16px;
-        transition: border-color 0.3s ease;
+        transition: all 0.3s ease;
+        background: rgba(255, 255, 255, 0.9);
       }
       .form-group input:focus,
       .form-group textarea:focus {
         outline: none;
         border-color: #5d3fd3;
+        box-shadow: 0 0 0 3px rgba(93, 63, 211, 0.1);
       }
       .form-row {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
       }
+      @media (max-width: 768px) {
+        .form-row {
+          grid-template-columns: 1fr;
+        }
+      }
       .reservation-details {
-        background: #f8fafc;
+        background: rgba(248, 250, 252, 0.9);
         padding: 20px;
         border-radius: 8px;
         margin-bottom: 20px;
+        border: 1px solid rgba(229, 231, 235, 0.5);
       }
       .reservation-details h3 {
         color: #5d3fd3;
         margin-bottom: 15px;
+        font-size: 1.2rem;
       }
       .detail-item {
         display: flex;
         justify-content: space-between;
         margin-bottom: 10px;
         padding: 8px 0;
-        border-bottom: 1px solid #e5e7eb;
+        border-bottom: 1px solid rgba(229, 231, 235, 0.5);
       }
       .detail-item:last-child {
         border-bottom: none;
@@ -91,7 +89,7 @@
         color: #5d3fd3;
       }
       .payment-section {
-        background: #f0fdf4;
+        background: rgba(240, 253, 244, 0.95);
         border: 2px solid #10b981;
       }
       .payment-amount {
@@ -100,12 +98,13 @@
         font-weight: bold;
         color: #10b981;
         margin-bottom: 20px;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
       #card-element {
         padding: 12px;
         border: 2px solid #e5e7eb;
         border-radius: 8px;
-        background: white;
+        background: rgba(255, 255, 255, 0.9);
       }
       #card-errors {
         color: #ef4444;
@@ -113,7 +112,7 @@
         font-size: 14px;
       }
       .btn-submit {
-        background: #10b981;
+        background: linear-gradient(135deg, #10b981, #059669);
         color: white;
         padding: 15px 30px;
         border: none;
@@ -122,14 +121,19 @@
         font-weight: 600;
         cursor: pointer;
         width: 100%;
-        transition: background-color 0.3s ease;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 15px rgba(16, 185, 129, 0.3);
       }
       .btn-submit:hover {
-        background: #059669;
+        background: linear-gradient(135deg, #059669, #047857);
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(16, 185, 129, 0.4);
       }
       .btn-submit:disabled {
         background: #9ca3af;
         cursor: not-allowed;
+        transform: none;
+        box-shadow: none;
       }
       .loading {
         display: none;
@@ -154,104 +158,221 @@
         }
       }
       .error-message {
-        background: #fef2f2;
+        background: rgba(254, 242, 242, 0.95);
         color: #ef4444;
         padding: 15px;
         border-radius: 8px;
         margin-bottom: 20px;
         border: 1px solid #fecaca;
+        backdrop-filter: blur(10px);
       }
       .success-message {
-        background: #f0fdf4;
+        background: rgba(240, 253, 244, 0.95);
         color: #10b981;
         padding: 15px;
         border-radius: 8px;
         margin-bottom: 20px;
         border: 1px solid #bbf7d0;
+        backdrop-filter: blur(10px);
+      }
+      .back-button {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        background: rgba(255, 255, 255, 0.9);
+        color: #5d3fd3;
+        padding: 10px 15px;
+        border-radius: 8px;
+        text-decoration: none;
+        font-weight: 600;
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(93, 63, 211, 0.2);
+        transition: all 0.3s ease;
+        z-index: 1000;
+      }
+      .back-button:hover {
+        background: rgba(93, 63, 211, 0.1);
+        transform: translateY(-2px);
+      }
+      .progress-bar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(90deg, #5d3fd3, #10b981);
+        z-index: 1001;
       }
     </style>
   </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1>🎉 Finaliser ma réservation</h1>
-        <p>Complétez les informations et effectuez le paiement de l'acompte</p>
+  <body class="is-preload">
+    <!-- Progress Bar -->
+    <div class="progress-bar"></div>
+
+    <!-- Back Button -->
+    <a href="/" class="back-button">
+      <i class="fas fa-arrow-left"></i> Retour
+    </a>
+
+    <!-- Page Wrapper -->
+    <div id="page-wrapper">
+      <!-- Wrapper -->
+      <div id="wrapper">
+        <!-- H E A D E R //////////////////////////////////////////////////////////////////////////////// -->
+        <section class="panel banner right">
+          <div class="content color0 span-3-75">
+            <h2 class="major">
+              Finaliser ma<br />
+              <span class="themysion">réservation</span>
+            </h2>
+            <p>
+              Votre demande de réservation a été acceptée ! Complétez les
+              informations ci-dessous et effectuez le paiement de l'acompte de
+              10% pour confirmer votre séjour à Calypso Bay.
+            </p>
+            <ul class="actions">
+              <li>
+                <a
+                  href="#form"
+                  class="button primary color1 circle icon solid fa-angle-right"
+                  >Commencer</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="image filtered span-1-75" data-position="25% 25%">
+            <img src="images/pic01.jpg" alt="" />
+          </div>
+        </section>
+
+        <!-- F O R M U L A I R E //////////////////////////////////////////////////////////////////////////////// -->
+        <section class="panel spotlight medium right" id="form">
+          <div class="content span-9-5">
+            <h3 class="major">📋 Informations personnelles</h3>
+            <p>
+              Veuillez compléter vos informations personnelles pour finaliser
+              votre réservation. Ces données nous permettront de vous contacter
+              et de préparer votre accueil.
+            </p>
+
+            <div id="error-container"></div>
+            <div id="success-container"></div>
+
+            <form id="finalization-form">
+              <div class="form-section">
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="name">Nom complet *</label>
+                    <input type="text" id="name" name="name" required />
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email *</label>
+                    <input type="email" id="email" name="email" required />
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="tel">Téléphone *</label>
+                    <input type="tel" id="tel" name="tel" required />
+                  </div>
+                  <div class="form-group">
+                    <label for="address">Adresse *</label>
+                    <input type="text" id="address" name="address" required />
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group">
+                    <label for="city">Ville *</label>
+                    <input type="text" id="city" name="city" required />
+                  </div>
+                  <div class="form-group">
+                    <label for="postal">Code postal *</label>
+                    <input type="text" id="postal" name="postal" required />
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label for="country">Pays *</label>
+                  <input
+                    type="text"
+                    id="country"
+                    name="country"
+                    value="France"
+                    required
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="image filtered tinted" data-position="center">
+            <img src="images/pic02.jpg" alt="" />
+          </div>
+        </section>
+
+        <!-- D É T A I L S //////////////////////////////////////////////////////////////////////////////// -->
+        <section class="panel large color1">
+          <div class="intro joined span-3-5">
+            <h2 class="major">📅 Détails de la réservation</h2>
+            <p>
+              Voici un récapitulatif de votre demande de réservation. Vérifiez
+              que toutes les informations sont correctes avant de procéder au
+              paiement.
+            </p>
+          </div>
+          <div class="inner">
+            <div class="form-section">
+              <div class="reservation-details" id="reservation-details">
+                <div class="loading">
+                  <div class="spinner"></div>
+                  <p>Chargement des détails...</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- P A I E M E N T //////////////////////////////////////////////////////////////////////////////// -->
+        <section class="panel color4-alt">
+          <div class="intro color4">
+            <h2 class="major">💳 Paiement de l'acompte</h2>
+            <p>
+              Pour confirmer votre réservation, veuillez effectuer le paiement
+              de l'acompte de 10% du montant total. Le solde sera à régler sur
+              place lors de votre arrivée.
+            </p>
+          </div>
+          <div class="inner columns divided">
+            <div class="span-4-5">
+              <div class="form-section payment-section">
+                <div class="payment-amount" id="payment-amount">
+                  Calcul en cours...
+                </div>
+                <div class="form-group">
+                  <label for="card-element"
+                    >Informations de carte bancaire</label
+                  >
+                  <div id="card-element"></div>
+                  <div id="card-errors" role="alert"></div>
+                </div>
+                <button
+                  type="submit"
+                  class="btn-submit"
+                  id="submit-button"
+                  form="finalization-form"
+                >
+                  Payer l'acompte et confirmer ma réservation
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-
-      <div id="error-container"></div>
-      <div id="success-container"></div>
-
-      <form id="finalization-form">
-        <div class="form-section">
-          <h2>📋 Informations personnelles</h2>
-          <div class="form-row">
-            <div class="form-group">
-              <label for="name">Nom complet *</label>
-              <input type="text" id="name" name="name" required />
-            </div>
-            <div class="form-group">
-              <label for="email">Email *</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label for="tel">Téléphone *</label>
-              <input type="tel" id="tel" name="tel" required />
-            </div>
-            <div class="form-group">
-              <label for="address">Adresse *</label>
-              <input type="text" id="address" name="address" required />
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group">
-              <label for="city">Ville *</label>
-              <input type="text" id="city" name="city" required />
-            </div>
-            <div class="form-group">
-              <label for="postal">Code postal *</label>
-              <input type="text" id="postal" name="postal" required />
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="country">Pays *</label>
-            <input
-              type="text"
-              id="country"
-              name="country"
-              value="France"
-              required
-            />
-          </div>
-        </div>
-
-        <div class="form-section">
-          <h2>📅 Détails de la réservation</h2>
-          <div class="reservation-details" id="reservation-details">
-            <div class="loading">
-              <div class="spinner"></div>
-              <p>Chargement des détails...</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-section payment-section">
-          <h2>💳 Paiement de l'acompte (10%)</h2>
-          <div class="payment-amount" id="payment-amount">
-            Calcul en cours...
-          </div>
-          <div class="form-group">
-            <label for="card-element">Informations de carte bancaire</label>
-            <div id="card-element"></div>
-            <div id="card-errors" role="alert"></div>
-          </div>
-          <button type="submit" class="btn-submit" id="submit-button">
-            Payer l'acompte et confirmer ma réservation
-          </button>
-        </div>
-      </form>
     </div>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
       // Initialiser Stripe
@@ -320,32 +441,30 @@
         // Afficher les détails de réservation
         const detailsContainer = document.getElementById('reservation-details')
         detailsContainer.innerHTML = `
-                <h3>Résumé de votre demande</h3>
-                <div class="detail-item">
-                    <span>Nom :</span>
-                    <span>${escapeHtml(data.name)}</span>
-                </div>
-                <div class="detail-item">
-                    <span>Email :</span>
-                    <span>${escapeHtml(data.email)}</span>
-                </div>
-                <div class="detail-item">
-                    <span>Détails :</span>
-                    <span>${formatReservationDetails(
-                      data.reservationDetails
-                    )}</span>
-                </div>
-                ${
-                  data.userMessage
-                    ? `
-                <div class="detail-item">
-                    <span>Message :</span>
-                    <span>${escapeHtml(data.userMessage)}</span>
-                </div>
-                `
-                    : ''
-                }
-            `
+					<h3>Résumé de votre demande</h3>
+					<div class="detail-item">
+						<span>Nom :</span>
+						<span>${escapeHtml(data.name)}</span>
+					</div>
+					<div class="detail-item">
+						<span>Email :</span>
+						<span>${escapeHtml(data.email)}</span>
+					</div>
+					<div class="detail-item">
+						<span>Détails :</span>
+						<span>${formatReservationDetails(data.reservationDetails)}</span>
+					</div>
+					${
+            data.userMessage
+              ? `
+					<div class="detail-item">
+						<span>Message :</span>
+						<span>${escapeHtml(data.userMessage)}</span>
+					</div>
+					`
+              : ''
+          }
+				`
       }
 
       function calculatePaymentAmount(data) {
